--- a/evonsys/pom.xml
+++ b/evonsys/pom.xml
@@ -29,16 +29,24 @@
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>3.141.59</version>
+    <version>3.141.5</version>
 </dependency>
   
   <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
-    <version>6.9.10</version><!-- since 6.9.10 vesion is only compatiable with the testng plugin which is installed -->
-   
+    <version>6.9.9</version><!-- since 6.9.10 vesion is only compatiable with the testng plugin which is installed -->
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-java</artifactId>
+    <version>5.6.0</version>
+</dependency>
+
+
 <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 <dependency>
     <groupId>org.apache.poi</groupId>
@@ -52,11 +60,34 @@
     <version>4.1.2</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-java -->
+<dependency>
+    <groupId>info.cukes</groupId>
+    <artifactId>cucumber-java</artifactId>
+    <version>1.2.5</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
+<dependency>
+    <groupId>net.masterthought</groupId>
+    <artifactId>cucumber-reporting</artifactId>
+    <version>5.1.1</version>
+</dependency>
+
+
+
   <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-testng -->
 <dependency>
     <groupId>info.cukes</groupId>
     <artifactId>cucumber-testng</artifactId>
     <version>1.2.5</version>
+    <scope>compile</scope>
+    <exclusions>
+    	<exclusion>
+    		<groupId>junit</groupId>
+    		<artifactId>junit</artifactId>
+    	</exclusion>
+    </exclusions>
 </dependency>
   
   <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
@@ -66,20 +97,59 @@
     <version>4.1.2</version>
 </dependency>
   
+  <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-junit</artifactId>
+    <version>5.4.1</version>
+    <scope>test</scope>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-core -->
+<dependency>
+    <groupId>info.cukes</groupId>
+    <artifactId>cucumber-core</artifactId>
+    <version>1.2.6</version>
+    <type>pom</type>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-testng</artifactId>
+    <version>5.4.2</version>
+</dependency>
+
+  
+  <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-jvm-deps -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-jvm-deps</artifactId>
+    <version>1.0.6</version>
+    <scope>provided</scope>
+</dependency>
+  
+  <!-- https://mvnrepository.com/artifact/io.cucumber/gherkin -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>gherkin</artifactId>
+    <version>12.0.0</version>
+</dependency>
+  
   <!-- https://mvnrepository.com/artifact/log4j/log4j -->
 <dependency>
     <groupId>log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>1.2.17</version>
+    <version>1.2.16</version>
 </dependency>
   
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
-   
     </dependency>
-  </dependencies>
+    
+</dependencies>
   
   <build>
   	<plugins>
@@ -89,16 +159,17 @@
    			 <artifactId>maven-surefire-plugin</artifactId>
    			 <version>2.22.2</version>
    			 <configuration>
-   			 	<systemPropertyVariables>
+   			<!--  <testFailureIgnore>true </testFailureIgnore> -->
+   			 	<!-- <systemPropertyVariables>
    			 	<property>
    			 		<name>url1</name>
    			 		<value>${url1}</value>
    			 	</property>
-   			 		<!-- <property>
+   			 		<property>
    			 		<name>username</name>
    			 		<value>${username}</value>
-   			 	</property> -->
-   			 	</systemPropertyVariables>
+   			 	</property>
+   			 	</systemPropertyVariables> -->
    			 	<suiteXmlFiles>
    			 		<suiteXmlFile>testng.xml</suiteXmlFile>
    			 	</suiteXmlFiles>
@@ -106,18 +177,45 @@
    			 </configuration>
   		</plugin>
   	
-
-  		
-  		<plugin>
-  				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+ <plugin>		
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-compiler-plugin</artifactId>
     <version>3.8.1</version>
-    <configuration>
-    <source>1.8</source>
-    <target>1.8</target>
-    </configuration>
-  		</plugin>
+    	<configuration>
+    		<source>1.8</source>
+    		<target>1.8</target>
+    	</configuration>
+ </plugin>
+ <!-- https://mvnrepository.com/artifact/net.masterthought/maven-cucumber-reporting -->
+ 
+ <plugin>
+    <groupId>net.masterthought</groupId>
+    <artifactId>maven-cucumber-reporting</artifactId>
+    <version>5.0.0</version>
+    <executions>
+    	<execution>
+    		<id>execution</id>
+    		<phase>verify</phase>
+    		<goals>
+    			<goal>generate</goal>
+    		</goals>
+    		<configuration>
+    			<projectName>CITI</projectName>
+    			<outputDirectory>target/cucumber-reports/advanced-reports</outputDirectory>
+    			<cucumberOutput>target/cucumber-reports/cucumberTestReport.json</cucumberOutput>
+    			<buildNumber>1</buildNumber>
+    			<parallelTesting>false</parallelTesting>
+    		</configuration>
+    	</execution>
+    </executions>
+ </plugin> 		
+  	<plugin>
+  	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-resources-plugin</artifactId>
+    <version>3.1.0</version>
+  	</plugin>	
   	</plugins>
   </build>
 </project>
