--- a/evonsys/src/main/java/com/evonsys/citi/properties/config/config.properties
+++ b/evonsys/src/main/java/com/evonsys/citi/properties/config/config.properties
@@ -1,5 +1,8 @@
-implicitwait = 120
+implicitwait = 60
 explicitwait = 200
-pageloadtime = 200
+pageloadtime = 30
 browsertype = Chrome
-url = https://www.seleniumhq.org/download
+url = http://192.168.94.163:8080/prweb/
+#url= https://hcmuat.evonsys.com/prweb/
+varunUserName = varun
+varunPassword = Install@1234
