--- a/evonsys/src/main/java/com/evonsys/citi/properties/config/config.properties
+++ b/evonsys/src/main/java/com/evonsys/citi/properties/config/config.properties
@@ -6,3 +6,7 @@ url = http://192.168.94.163:8080/prweb/
 #url= https://hcmuat.evonsys.com/prweb/
 varunUserName = varun
 varunPassword = Install@1234
+hcmUAT = https://hcmuat.evonsys.com/prweb/
+hcmCreationOperator6 = HCM.User6 
+hcmApprovedOperator1=HCM.ITUser1
+hcmPassword = Install@1234
