--- a/evonsys/pom.xml
+++ b/evonsys/pom.xml
@@ -15,7 +15,32 @@
 	</properties>
 
 	<dependencies>
-
+	<!-- this is to read pdf file -->
+	<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+<dependency>
+    <groupId>org.apache.pdfbox</groupId>
+    <artifactId>pdfbox</artifactId>
+    <version>2.0.19</version>
+</dependency>
+<!-- this is to read pdf file -->
+	<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/fontbox -->
+<dependency>
+    <groupId>org.apache.pdfbox</groupId>
+    <artifactId>fontbox</artifactId>
+    <version>2.0.19</version>
+</dependency>
+	
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>4.0.0-alpha-6</version>
+</dependency>
+<dependency>
+    <groupId>com.asprise.ocr</groupId>
+    <artifactId>java-ocr-api</artifactId>
+    <version>[15,)</version>
+</dependency>
 
 
 <!-- https://mvnrepository.com/artifact/com.sikulix/sikulixapi -->
@@ -24,6 +49,13 @@
     <artifactId>sikulixapi</artifactId>
     <version>2.0.3</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.bytedeco.javacpp-presets/tesseract -->
+<dependency>
+    <groupId>org.bytedeco.javacpp-presets</groupId>
+    <artifactId>tesseract</artifactId>
+    <version>4.0.0-1.4.4</version>
+</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
@@ -131,12 +163,12 @@
 			<artifactId>cucumber-testng</artifactId>
 			<version>1.2.5</version>
 			<scope>compile</scope>
-			<exclusions>
+			<!-- <exclusions>
 				<exclusion>
 					<groupId>junit</groupId>
 					<artifactId>junit</artifactId>
 				</exclusion>
-			</exclusions>
+			</exclusions> -->
 		</dependency>
 
 	
@@ -233,7 +265,7 @@
 					<execution>
 						<id>execution</id>
 						<phase>verify</phase>
-						<!-- <goals> <goal>generate</goal> </goals> -->
+						<goals> <goal>generate</goal> </goals>
 						<configuration>
 							<projectName>CITI</projectName>
 							<outputDirectory>target/cucumber-reports/advanced-reports</outputDirectory>
