--- a/evonsys/pom.xml
+++ b/evonsys/pom.xml
@@ -15,6 +15,14 @@
 	</properties>
 
 	<dependencies>
+<!-- https://mvnrepository.com/artifact/fr.opensagres.xdocreport/fr.opensagres.poi.xwpf.converter.pdf -->
+<dependency>
+    <groupId>fr.opensagres.xdocreport</groupId>
+    <artifactId>fr.opensagres.poi.xwpf.converter.pdf</artifactId>
+    <version>2.0.2</version>
+</dependency>
+
+	
 	<!-- this is to read pdf file -->
 	<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
 <dependency>
@@ -223,7 +231,49 @@
 			<artifactId>junit</artifactId>
 			<version>4.13</version>
 		</dependency>
+<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+<dependency>
+    <groupId>ch.qos.logback</groupId>
+    <artifactId>logback-classic</artifactId>
+    <version>1.2.3</version>
+    <scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>1.7.30</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.itextpdf/itext-licensekey -->
+<!-- <dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>itext-licensekey</artifactId>
+    <version>3.1.0</version>
+</dependency> -->
+<!-- https://mvnrepository.com/artifact/com.itextpdf/layout -->
+<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>layout</artifactId>
+    <version>7.1.11</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.itextpdf/kernel -->
+<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>kernel</artifactId>
+    <version>7.1.11</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.itextpdf/html2pdf -->
+<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>html2pdf</artifactId>
+    <version>3.0.0</version>
+</dependency>
 
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
